# entient-audit

./: .gitignore  BOUNDARY.md  LICENSE  Makefile  README.md  canonicalizer.py  conformance.jsonl  golden_fixtures.json  keyregistry.py  policy_spec.toml  prove.py  pyproject.toml  receipts.py  requirements.txt  test_envelope_verify.py  verify_canon_v1.py
.github/workflows/: ci.yml
