[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "entient-audit"
version = "0.1.0"
description = "Receipt verification and audit tooling for ENTIENT"
authors = [{ name = "Entient LLC" }]
license = "Proprietary"
requires-python = ">=3.9"
dependencies = [
    "PyNaCl>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]
